@@ -1,13 +1,9 @@
 ---
 fixtures:
   repositories:
-    #auditd: https://github.com/simp/pupmod-simp-auditd
-    augeasproviders_core:
-      repo: https://github.com/simp/augeasproviders_core
-      branch: simp-master
-    augeasproviders_grub:
-      repo: https://github.com/simp/augeasproviders_grub
-      branch: simp-master
+    auditd: https://github.com/simp/pupmod-simp-auditd
+    augeasproviders_core: https://github.com/simp/augeasproviders_core
+    augeasproviders_grub: https://github.com/simp/augeasproviders_grub
     logrotate: https://github.com/simp/pupmod-simp-logrotate
     pki: https://github.com/simp/pupmod-simp-pki
     rsyslog: https://github.com/simp/pupmod-simp-rsyslog
@@ -17,4 +13,3 @@ fixtures:
     stdlib: https://github.com/simp/puppetlabs-stdlib
   symlinks:
     aide: "#{source_dir}"
-    auditd: "#{source_dir}/../auditd"
